# yinternship

./: pyproject.toml  requirements.txt
myenv/: pyvenv.cfg
myenv/Scripts/: activate.bat
myproject/: db.sqlite3  render.yaml
myproject/myapp/: forms.py  models.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py
myproject/myapp/templates/: private_chat_list.html  role_selection.html
myproject/myapp/templates/Company_Admin/: company_admin_register.html
myproject/myapp/templates/Supervisor/: assign_workdays.html  assigned_students.html  confirm_task.html  create_supervisor.html  edit_monthly_evaluation.html  edit_weekly_feedback.html  provide_weekly_feedback.html  student_activity.html  student_reported_tasks.html  submit_monthly_evaluation.html  supervisor_feedback.html  supervisor_list.html  supervisor_register.html  supervisors.html  update_supervisor.html  view_supervisor_details.html
myproject/myapp/templates/admin/: admin_base.html  admin_dashboard.html
myproject/myapp/templates/advisors/: advisor_dashboard.html  advisor_give_feedback.html  advisor_management.html  advisor_register.html  assign_advisor.html  assigned_students.html  create_advisor.html  edit_feedback.html  provide_feedback.html  student_daily_work_reports.html  update_advisor.html
myproject/myapp/templates/company/: edit_company.html  register_company.html
myproject/myapp/templates/departement_head/: base.html  create_department.html  edit_profile.html  (+6 more)
myproject/myapp/templatetags/: custom_filters.py  evaluation_tags.py
myproject/myproject/: settings.py  wsgi.py
(+15 files in other folders)
