[tool.poetry]
name = "myproject"  # Replace with your actual project name (no spaces, lowercase)
version = "0.1.0"
description = "My Django Project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"  # Important for package metadata

[tool.poetry.dependencies]
python = "^3.8"  # Specify your Python version
django = "^5.0"  # Django version
gunicorn = "^21.2.0"  # Required for production deployment
# Add other production dependencies here

[tool.poetry.group.dev.dependencies]
black = "^24.0"  # Development-only dependencies
pylint = "^3.1"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"