[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "My Django Project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # Changed from 3.8 to 3.10 (Django 5.x requirement)
django = "^5.0"
gunicorn = "^21.2.0"
# Add other production dependencies here

[tool.poetry.group.dev.dependencies]
black = "^24.0"
pylint = "^3.1"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"